Fixed portal retriever to work with BC portal